--- a/app/views/farmer/registrations/new.html.erb
+++ b/app/views/farmer/registrations/new.html.erb
@@ -2,12 +2,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 offset-2 text-center">
-      <div class="box1">
+
 
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "farmer/shared/error_messages", resource: resource %>
-        <h2>新規会員登録</h2>
+      <div class="box1">
+        <h2>生産者新規会員登録</h2>
       </div>
     </div>
   </div>
