--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -3,8 +3,8 @@
     <div class="row">
         <div class="col-md-12">
           <div class="text-center">
-            <div class="display-1 fst-italic">Agrin Work</div>
-        　</div>
+            <div class="display-1 fst-it">Agrin Work</div>
+          </div>
         </div>
     </div>
 
@@ -23,8 +23,8 @@
             <%= link_to new_customer_registration_path, class: "btn btn-outline-success btn-block mt-5" do %>
               新規登録<i class="fas fa-plus"></i>
             <% end %>
-        　  </div>
-        　</div>
+            </div>
+          </div>
         </div>
 
       <div class="col-md-6">
@@ -45,4 +45,5 @@
         </div>
       </div>
     </div>
+
   </div>
