--- a/app/assets/stylesheets/farmer/job_offers.scss
+++ b/app/assets/stylesheets/farmer/job_offers.scss
@@ -3,17 +3,6 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 // @import '~bootstrap/scss/bootstrap';
-@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+//@import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
-.box4{
-    padding: 8px 19px;
-    margin: 2em 0;
-    color: #2c2c2f;
-    background: #cde4ff;
-    border-top: solid 5px #5989cf;
-    border-bottom: solid 5px #5989cf;
-}
-.box4 p {
-    margin: 0;
-    padding: 0;
-}
+
