fix farmers_farmers_show to_update_link

--- a/app/views/farmer/farmers/show.html.erb
+++ b/app/views/farmer/farmers/show.html.erb
@@ -11,7 +11,7 @@
         </div>
       </div>
       <div class="col-md-2 offset-2 align-self-center">
-      <%= link_to '編集する', farmer_farmers_mypage_edit_path(@farmer), class: "btn btn-success btn-lg" %>
+      <%= link_to '編集する', farmer_farmers_mypage_edit_path, class: "btn btn-success btn-lg" %>
       </div>
     </div>
 
