--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
 
 
 <body>
+ 
+
+  <% unless  (controller_path == "admin/sessions" && action_name == "new") %>
     <header class="shadow-sm">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
@@ -83,9 +86,11 @@
                  <%= link_to "ログアウト", destroy_farmer_session_path, method: :delete, class: "btn btn-outline-secondary" %>
                </li>
                <% else %>
+               
                <li>
                  <%= link_to "登録・ログイン", about_path, class: "btn btn-outline-secondary" %>
                </li>
+
               <% end %>
 
 
@@ -95,6 +100,7 @@
         </div>
       </nav>
     </header>
+    <%end %>
   <main class="mb-auto">
     <%= yield %>
   </main>
