--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -1,13 +1,14 @@
 <p id="notice"></p>
 <div class="container">
-  <div class="row">
-    <div class="col-md-8 offset-2 text-center">
-
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "customer/shared/error_messages", resource: resource %>
+
+  <div class="row">
+    <div class="col-md-8 mx-auto">
       <div class="box1">
-        <h2>利用者新規会員登録</h2>
+        <h2 class="text-center">利用者新規会員登録</h2>
+      </div>
+      <div class="text-center">
+        <%= render "customer/shared/error_messages", resource: resource %>
       </div>
     </div>
   </div>
@@ -86,7 +87,7 @@
     <div class="col-md-3 py-2 offset-1">
       <%= f.label :年齢 %>
     </div>
-    <div class="col-md-7 py-2 offset-1">
+    <div class="col-md-6 py-2 offset-1">
       <%= f.text_field :age %> 歳
     </div>
 
