--- a/app/views/farmer/registrations/new.html.erb
+++ b/app/views/farmer/registrations/new.html.erb
@@ -1,17 +1,18 @@
 <p id="notice"></p>
 <div class="container">
-  <div class="row">
-    <div class="col-md-8 offset-2 text-center">
-
-
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "farmer/shared/error_messages", resource: resource %>
+
+  <div class="row">
+    <div class="col-md-8 mx-auto">
       <div class="box1">
-        <h2>生産者新規会員登録</h2>
+        <h2 class="text-center">生産者新規会員登録</h2>
+      </div>
+      <div class="text-center">
+        <%= render "farmer/shared/error_messages", resource: resource %>
       </div>
     </div>
   </div>
+
 
   <div class="row align-center">
     <div class="col-md-3 py-2 offset-1">
