fix customer mypage edit view farmer mypage edit view

--- a/app/views/farmer/job_offers/edit.html.erb
+++ b/app/views/farmer/job_offers/edit.html.erb
@@ -38,7 +38,7 @@
       日数(短期の場合)
     </div>
     <div class="col-md-5 py-3">
-      <%= f.text_field :number_of_days, class:"w-25" %>
+      <%= f.text_field :number_of_days, :placeholder => "〇日間", class:"w-25" %>
     </div>
     <div class="col-md-2 py-3 offset-3">
       開始時間
