--- a/app/views/farmer/farmers/edit.html.erb
+++ b/app/views/farmer/farmers/edit.html.erb
@@ -1,9 +1,20 @@
 <p id="notice"></p>
   <div class="container">
+
     <div class="row">
-      <div class="col-md-8 offset-2 text-center">
+      <div class="col-md-8 mx-auto">
         <div class="box1">
-          <h2>生産者マイページ編集</h2>
+          <h2 class="text-center">生産者マイページ編集</h2>
+        </div>
+        <div class="text-center">
+          <% if @farmer.errors.any? %>
+            <%= @farmer.errors.count %>件のエラーが発生しました
+            <ul class="list-unstyled">
+              <% @farmer.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          <% end %>
         </div>
       </div>
     </div>
