--- a/app/views/farmer/job_offers/new.html.erb
+++ b/app/views/farmer/job_offers/new.html.erb
@@ -1,21 +1,23 @@
 <p id="notice"></p>
 <div class="container">
-  <div class="row">
-      <div class="col-md-8 offset-2 text-center">
+
+    <div class="row">
+      <div class="col-md-8 mx-auto">
         <div class="box1">
-          <h2>求人登録</h2>
+          <h2 class="text-center">求人登録</h2>
+        </div>
+        <div class="text-center">
+          <% if @job_offer.errors.any? %>
+            <%= @job_offer.errors.count %>件のエラーが発生しました
+            <ul class="list-unstyled">
+              <% @job_offer.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          <% end %>
         </div>
       </div>
-  </div>
-
-  <% if @job_offer.errors.any? %>
-  <%= @job_offer.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @job_offer.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+    </div>
 
    <%= form_with model: @job_offer, url: farmer_job_offers_path do |f| %>
   <div class="row">
