--- a/app/views/farmer/job_offers/edit.html.erb
+++ b/app/views/farmer/job_offers/edit.html.erb
@@ -1,12 +1,23 @@
 <p id="notice"></p>
 <div class="container">
+
   <div class="row">
-      <div class="col-md-8 offset-2 text-center">
+      <div class="col-md-8 mx-auto">
         <div class="box1">
-          <h2>求人編集ページ</h2>
+          <h2 class="text-center">求人編集ページ</h2>
+        </div>
+        <div class="text-center">
+          <% if @job_offer.errors.any? %>
+            <%= @job_offer.errors.count %>件のエラーが発生しました
+            <ul class="list-unstyled">
+              <% @job_offer.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          <% end %>
         </div>
       </div>
-  </div>
+    </div>
 
    <%= form_with model: @job_offer, url: farmer_job_offer_path(@job_offer.id) do |f| %>
   <div class="row">
