fix application view footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,13 +113,13 @@
             <%= image_tag('no_image.jpg') %>
           </div>
           <div class="col-md-8">
-            <h6 class="text-white mt-2 mb-3">Link</h6>
+            <h6 class="text-white mt-2 mb-3">お問い合わせ先</h6>
             <ul class="p-0 list-unstyled">
               <li>
-                <a href="" title="About" class="text-white-50">会社概要</a>
+                <a href="" title="About" class="text-white-50">○○○○＠○○○○</a>
               </li>
               <li>
-                <a href="" title="License informations" class="text-white-50">プライバシーポリシー</a>
+                <a href="" title="About" class="text-white-50">○○○‐○○○‐○○○</a>
               </li>
             </ul>
           </div>
